# AI-trading-bot

./: .gitignore  404.html  README.md  index.html  main.py  objects.inv  password.env  pyproject.toml  todo
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code_quality.yml  mkdocs.yml  tests.yml
docs/: mkdocs.yml
how_it_works/: index.html
how_it_works/agents/: index.html
introduction/: index.html
introduction/explanation/: index.html
introduction/reference/: index.html
market_intel_lib/: pyproject.toml
market_intel_lib/market_intel_lib/: constants.py  file_storage.py
market_intel_lib/market_intel_lib/db/subscriptions/: protocol.py
market_intel_lib/market_intel_lib/db/users/: __init__.py  protocol.py  user.py  user_service.py
market_intel_lib/market_intel_lib/logger/: configure.py
market_intel_lib/market_intel_lib/models/: infisical.py  settings.py
market_intel_lib/market_intel_lib/schemas/: logger.py
market_intel_lib/market_intel_lib/secrets/: __init__.py  infisical.py  protocol.py
market_intel_lib/market_intel_lib/settings/: __init__.py  settings.toml
reference/: index.html
reference/src.init.py/: index.html
search/: search_index.json
src/: __init__.py  server.py
src/agent/: get_market_data.py  get_market_data_alpaca.py
src/agents/: buy_agent.py  sell_agent.py  tradingAgentV1.py
src/alpaca/: __init__.py  account_manager.py  asset_manager.py  common.py  market_info.py  orders_manager.py  trading.py
src/market_intel_lib/: pyproject.toml
src/market_intel_lib/market_intel_lib/: __init__.py  constants.py  file_storage.py
src/market_intel_lib/market_intel_lib/db/: __init__.py  declarative_base.py
src/market_intel_lib/market_intel_lib/db/subscriptions/: __init__.py  postgres_subscription_token_repository.py  subscription_token.py  subscription_token_service.py
src/market_intel_lib/market_intel_lib/db/users/: postgres_user_repository.py  user.py
src/market_intel_lib/market_intel_lib/logger/: configure.py
src/market_intel_lib/market_intel_lib/models/: custom_base_model.py  settings.py  user.py
src/market_intel_lib/market_intel_lib/secrets/: infisical.py  protocol.py
src/market_intel_lib/market_intel_lib/settings/: __init__.py  settings.toml
src/market_intel_lib/market_intel_lib/utils/: file_storage.py  get_env_var.py
src/market_intel_lib/tests/: conftest.py  test_file_storage.py  test_get_resource_url.py  test_subscription_token_service.py  test_user_service.py
src/mcp/: mcp.py  server.py
src/modules/: __init__.py
src/news_analysis_service/: README.md  __init__.py  pyproject.toml
src/news_analysis_service/src/: constants.py
src/news_analysis_service/src/analyzer/: __init__.py  ai_service.py  content_analyzer.py
src/news_analysis_service/src/fastapi/: __init__.py  app.py  ollama.py  qwen.py
src/news_analysis_service/src/fastapi/v1/: __init__.py  v1.py
src/news_analysis_service/src/interfaces/: __init__.py  ai_service.py  content_analyzer.py
src/news_analysis_service/src/models/: __init__.py  action_union_types.py  ai_types.py  analysis_filters.py  news_items.py  ollama_api.py  qwen_api.py
src/news_analysis_service/src/models/fastapi/: __init__.py  app.py
src/news_analysis_service/src/prompts/: __init__.py  analyze_news.md  builder.py  financial_analysis_prompt.py
src/news_analysis_service/src/scripts/: run_fastapi.py  run_mq_worker.py
src/news_analysis_service/src/services/: __init__.py  ollama.py  qwen.py
src/news_analysis_service/src/settings/: __init__.py  mq_worker_settings.toml  settings.toml
src/news_analysis_service/src/settings/models/: fastapi_settings_model.py  mq_worker_settings_model.py  settings_model.py
src/news_analysis_service/src/tests/: receive_test_message.py  send_test_message.py
src/news_analysis_service/src/utils/: __init__.py  ingest_toml.py  logger.py
src/news_analysis_service/tests/: test_builder.py  test_fastapi_routers.py  test_get_ai_service.py  test_getting_compatible_api.py  test_ollama_service.py  test_qwen_service.py  test_run_mq_worker.py
src/news_collection_service/: README.md  docker-compose.dev.yml  pyproject.toml
src/router/: __init__.py  (+2 more)
src/telegram_user_app_service/: .db.env  .infisical.env  README.md  __init__.py  alembic.ini  docker-compose.dev.yml  pyproject.toml
src/telegram_user_app_service/migrations/: env.py
src/telegram_user_app_service/migrations/versions/: 2d14726b9fbe_user_table_created.py  9b90143ae775_subscriptions_token_table_created.py  c3a6f2e990cd_make_it_possible_to_delete_user_without_.py
src/telegram_user_app_service/src/: __init__.py  constants.py
src/telegram_user_app_service/src/db/: __init__.py  postgres_user_repository.py  protocol.py  user.py  user_service.py
src/telegram_user_app_service/src/db/subscriptions/: postgres_subscription_token_repository.py  protocol.py  subscription_token.py  subscription_token_service.py
src/telegram_user_app_service/src/db/users/: postgres_user_repository.py  protocol.py  user.py  user_service.py
src/telegram_user_app_service/src/fastapi/: __init__.py  app.py  subscription_tokens.py  telegram_bot.py  user_service.py
src/telegram_user_app_service/src/models/: __init__.py  bot.py  infisical.py  structured_input.py  subscription_token.py  telegram_app_handlers.py  user.py
src/telegram_user_app_service/src/models/fastapi/: __init__.py  app.py
src/telegram_user_app_service/src/scripts/: run_fastapi.py  run_mq_worker.py
src/telegram_user_app_service/src/secrets/: infisical.py  protocol.py
src/telegram_user_app_service/src/settings/: __init__.py  fastapi_settings.toml  mq_worker_settings.toml  settings.toml
src/telegram_user_app_service/src/settings/models/: fastapi_settings_model.py  mq_worker_settings_model.py  settings_model.py
src/telegram_user_app_service/src/telegram/app/: __init__.py  telegram_application.py
src/telegram_user_app_service/src/telegram/bot/: __init__.py  telegram_bot.py
src/telegram_user_app_service/src/tests/: send_test_message.py
src/telegram_user_app_service/src/utils/: __init__.py  get_env_var.py  get_resource_url.py  logger.py
(+52 files in other folders)
