[project]
name = "AI-Trading-Bot"
version = "0.1.0"
description = "Bot that uses Agentic AI to trade"
classifiers = ["Programming Language :: Python :: 3.12"]
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "Bot",
    "Trading",
    "Agentic AI",
]
dependencies = [
    "alpaca-py>=0.40.1",
    "fastapi>=0.115.13",
    "mcp[cli]>=1.9.4",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
]

[project.urls]
repository = "https://github.com/traiding-bot-project/AI-trading-bot"

[dependency-groups]
dev = [
    "bandit[sarif]>=1.8.5",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "mypy>=1.16.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
]

[tool.mypy]
exclude = ["docs/", "src/tests/"]
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.ruff]
line-length = 119
indent-width = 4
exclude = [
    "__pycache__",
    ".git",
    "docs"
]

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "D", "I", "A", "U", "N", "TD", "FAST"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.bandit]
exclude_dirs = ["src/tests"]
