[project]
name = "AI-Trading-Bot"
version = "0.1.0"
description = "Bot that uses Agentic AI to trade"
classifiers = ["Programming Language :: Python :: 3.14"]
readme = "README.md"
requires-python = ">=3.14"
keywords = [
    "Bot",
    "Trading",
    "Agentic AI",
]

[project.urls]
repository = "https://github.com/traiding-bot-project/AI-trading-bot"

[tool.uv]
workspace = { members = ["src/*", "market_intel_lib"] }