[project]
name = "market-intel-lib"
version = "0.1.0"
description = "Shared library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "mypy-boto3-s3>=1.43.14",
    "pydantic>=2.13.4",
    "types-aioboto3>=15.5.0",
    "types-aiobotocore-s3>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market_intel_lib"]
