[project]
name = "market-intel-lib"
version = "0.1.0"
description = "Shared library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "infisicalsdk>=1.0.16",
    "mypy-boto3-s3>=1.43.14",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.50",
    "types-aioboto3>=15.5.0",
    "types-aiobotocore-s3>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["market_intel_lib"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.16",
]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
explicit_package_bases = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "migrations.versions.*"
ignore_errors = true
