[project]
name = "news_analysis_service"
version = "0.1.0"
description = "News analysis service"
classifiers = ["Programming Language :: Python :: 3.14"]
readme = "README.md"
requires-python = ">=3.14"
keywords = [
    "Bot",
    "Trading",
    "Agentic AI",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.10",
]
fastapi = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
]
rabbitmq = [
    "pika>=1.3.2",
]

[project.urls]
repository = "https://github.com/traiding-bot-project/AI-trading-bot"

[project.scripts]
run-fastapi = "src.scripts.run_fastapi:main"
run-mq-worker = "src.scripts.run_mq_worker:main"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.ruff]
line-length = 119
indent-width = 4
exclude = [
    "__pycache__",
    ".git",
    "docs"
]

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "D", "I", "A", "U", "N", "TD", "FAST"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
