[project]
name = "telegram_user_app_service"
version = "0.1.0"
description = "Telegram user app service"
classifiers = ["Programming Language :: Python :: 3.14"]
readme = "README.md"
requires-python = ">=3.14"
keywords = [
    "Bot",
    "Trading",
    "Agentic AI",
]
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "infisicalsdk>=1.0.16",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-telegram-bot>=22.7",
    "sqlalchemy[asyncio]>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]
fastapi = [
    "fastapi>=0.135.2",
    "uvicorn>=0.44.0",
]
rabbitmq = [
    "pika>=1.3.2",
]

[project.urls]
repository = "https://github.com/traiding-bot-project/AI-trading-bot"

[project.scripts]
run-fastapi = "src.scripts.run_fastapi:main"
run-mq-worker = "src.scripts.run_mq_worker:main"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
explicit_package_bases = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
