[project]
name = "telegram_user_app_service"
version = "0.1.0"
description = "Telegram user app service"
classifiers = ["Programming Language :: Python :: 3.14"]
readme = "README.md"
requires-python = ">=3.14"
keywords = [
    "Bot",
    "Trading",
    "Agentic AI",
]
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "infisicalsdk>=1.0.16",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-telegram-bot>=22.7",
    "sqlalchemy[asyncio]>=2.0.50",
    "market-intel-lib"
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]
fastapi = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]
rabbitmq = [
    "aio-pika>=9.6.2",
]

[project.urls]
repository = "https://github.com/traiding-bot-project/AI-trading-bot"

[project.scripts]
run-fastapi = "src.scripts.run_fastapi:main"
run-mq-worker = "src.scripts.run_mq_worker:run"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
explicit_package_bases = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "migrations.versions.*"
ignore_errors = true

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
market-intel-lib = { workspace = true }